--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.username=kotlinpostgres
-spring.datasource.password=kotlinpostgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/restful-api
+spring.datasource.username=${DATABASE_USERNAME:kotlinpostgres}
+spring.datasource.password=${DATABASE_PASSWORD:kotlinpostgres}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/restful-api}
 spring.jpa.hibernate.ddl-auto=update
